<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="url"
            type="com.amrabdelhamiddiab.core.domain.NameOfImages" />
           </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_image_home_health"
            app:strokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:background="@color/white"
             imageUrl="@{url.health}"
            app:layout_constraintEnd_toStartOf="@+id/btn_image_home_beauty_care"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
<!--  imageUrl="@{listOfImagesOfCategories.listOfImages3[0].imageUrl}"-->
        <ImageButton
            android:id="@+id/btn_image_home_beauty_care"
            app:strokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@color/white"
            android:scaleType="centerCrop"
            imageUrl="@{url.beauty_care}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/btn_image_home_health"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/beauty_care" />

        <ImageButton
            android:id="@+id/btn_image_home_accessories"
            android:background="@color/white"
            app:strokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:scaleType="fitXY"
            imageUrl="@{url.accessories}"
            app:layout_constraintEnd_toStartOf="@+id/btn_image_home_personal_care"
            app:layout_constraintHorizontal_weight="13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_image_home_personal_care"
            android:background="@color/white"
            app:strokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="70dp"
            android:scaleType="centerCrop"
            imageUrl="@{url.personal_care}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/btn_image_home_accessories"
            app:layout_constraintTop_toTopOf="@+id/btn_image_home_accessories"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_image_home_medicines"
            android:background="@color/white"
            app:strokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            imageUrl="@{url.medicine}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/medicines"
            android:textColor="@color/blue"
            android:background="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_image_home_medicines" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:gravity="center"
            android:text="@string/health"
            android:background="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="@+id/btn_image_home_health"
            app:layout_constraintStart_toStartOf="@+id/btn_image_home_health"
            app:layout_constraintTop_toBottomOf="@+id/btn_image_home_health" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/beauty_care"
            android:background="@color/white"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="@+id/btn_image_home_beauty_care"
            app:layout_constraintStart_toStartOf="@+id/btn_image_home_beauty_care"
            app:layout_constraintTop_toBottomOf="@+id/btn_image_home_beauty_care" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:gravity="center"
            android:background="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/accessories"
            app:layout_constraintEnd_toEndOf="@+id/btn_image_home_accessories"
            app:layout_constraintStart_toStartOf="@+id/btn_image_home_accessories"
            app:layout_constraintTop_toBottomOf="@+id/btn_image_home_accessories" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:gravity="center"
            android:background="@color/white"
            android:lines="2"
            android:text="@string/personal_care"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="@+id/btn_image_home_personal_care"
            app:layout_constraintStart_toStartOf="@+id/btn_image_home_personal_care"
            app:layout_constraintTop_toBottomOf="@+id/btn_image_home_personal_care" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>